# compho

./: .gitignore  .ycm_extra_conf.py  README.md
1/code/: CMakeLists.txt  README  colorspace.cpp  colorspace.h  common.h  demosaicing.cpp  demosaicing.h  gamma.cpp  gamma.h  main.cpp  median_filter.cpp  median_filter.h
1/data/: lighthouse_RAW_noisy_sigma0.01.png.pp3
2/code/: CMakeLists.txt  common.h  focalstack.cpp  hdr.cpp  sobel.cpp  sobel.h
2/tn2/TONE_MAPPING/: 1200px-StLouisArchMultExpEV.exr  memorial.ppm  output.ppm  stlouis.ppm  tone_mapping
2/tn2/TONE_MAPPING/fft_3D/: support_3D.h
2/tn2/TONE_MAPPING/include/: linear_bf.h  msg_stream.h
3/Lab4/Pano-UI/: click.html
3/code/: CMakeLists.txt  apply_homography.cpp  apply_homography.h  compute_homography.cpp  monu.in  science.in  science2.in  show_homography.cpp  stata.in  stata.in~
4/code/: CMakeLists.txt  colorTransfer.cpp  flags.hh  generateTrainset.cpp  trainImage.cpp  trainImage.h
5/: light_dir.txt  light_int.txt
5/code/: CMakeLists.txt  common.h  photometricStereo.cpp  relighting.cpp
6/CodedApertureData/filts/: filt_scl01.mat  filt_scl02.mat  filt_scl03.mat  filt_scl04.mat  filt_scl05.mat  filt_scl06.mat  filt_scl07.mat  filt_scl08.mat  filt_scl09.mat  octave-workspace
6/code/: CMakeLists.txt  common.h  conv.cpp  conv.hpp  deconv.cpp  fft.cpp  fft.hpp
7/code/: CMakeLists.txt  depth.cpp  depth2D.cpp  dumper.cpp  dumper.h  fstack.cpp  lfs.cpp  lightfield.cpp  lightfield.hpp
8/: README
8/code/: CMakeLists.txt  naive.cpp  poisson.cpp
8/results/me/: params
presentation/: Makefile  presentation.tex  review.txt  style.sty
presentation/output/: presentation.aux  presentation.nav
